--- a/app/src/main/res/drawable/edittextborder.xml
+++ b/app/src/main/res/drawable/edittextborder.xml
@@ -6,7 +6,7 @@
     <!-- Border color and width -->
     <stroke
         android:width="1.5dp"
-        android:color="#000000"/> <!-- Black border -->
+        android:color="#000000"/>
 
     <!-- Background color (optional) -->
     <solid android:color="#FFFFFF"/> <!-- White background -->
