--- a/app/src/main/res/layout/signin.xml
+++ b/app/src/main/res/layout/signin.xml
@@ -5,19 +5,17 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:gravity="center"
-    android:background="#FFF5F5F5">
+    android:background="#4b5ae4">
 
-
+    <!-- Profile photo placeholder -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sign In"
-        android:textSize="30sp"
-        android:textStyle="bold"
         android:layout_marginBottom="30dp"
-        android:layout_marginRight="140dp"/>
-
-    <!-- Profile photo placeholder -->
+        android:gravity="center"
+        android:text="WELCOME"
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
     <ImageView
         android:layout_width="290dp"
@@ -25,16 +23,16 @@
         android:layout_marginBottom="50dp"
         android:background="#CCCCCC"
         android:scaleType="centerCrop"
-        android:src="@drawable/Image_1" />
+        android:src="@drawable/alertify" />
 
-    <!-- Total field -->
+    <!-- Name field -->
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Name"
         android:background="@drawable/edittextborder"
         android:layout_marginBottom="15dp"
-        android:padding="12dp"/> <!-- Add padding for better text visibility -->
+        android:padding="12dp" />
 
     <!-- Password field -->
     <EditText
@@ -43,16 +41,16 @@
         android:hint="Password"
         android:background="@drawable/edittextborder"
         android:layout_marginBottom="32dp"
-        android:padding="12dp"/>
+        android:padding="12dp" />
 
-    <!-- Sign up button -->
+    <!-- Sign in button -->
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Sign In"
         android:background="@drawable/buttonbackground"
         android:textColor="@android:color/white"
-        android:layout_marginBottom="16dp"/>
+        android:layout_marginBottom="16dp" />
 
     <!-- Footer text -->
     <TextView
@@ -60,12 +58,13 @@
         android:layout_height="wrap_content"
         android:text="Forgot your password!"
         android:textSize="12sp"
-        android:padding_bottom="12dp"/>
+        android:paddingBottom="12dp" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:text="New User! Create an account"
-        android:textSize="14sp"/>
+        android:textSize="14sp" />
 
 </LinearLayout>
